--- a/Shop_03_multiProduct/Views/Article/Category.cshtml
+++ b/Shop_03_multiProduct/Views/Article/Category.cshtml
@@ -2,7 +2,7 @@
 @{
     SearchArticleResults articleList = (SearchArticleResults)ViewData["ArticleList"];
 }
-  
+
 <div class="columns-container">
     <div class="container" id="columns">
         <!-- breadcrumb -->
@@ -21,170 +21,92 @@
             <!-- Center colunm-->
             @if (articleList.ResultsCount > 0)
             {
-                <div class="center_column col-xs-12 col-sm-9" id="center_column">
-                    <h2 class="page-heading">
-                        <span class="page-heading-title2">@ViewBag.CategoryName</span>
-                    </h2>
-                    <div class="sortPagiBar clearfix">
-
-                        <span class="page-noite">Có @articleList.ResultsCount bài viết trên chủ đề này</span>
-                        <div class="bottom-pagination">
-                            <nav>
-                                @Html.Raw(ViewBag.page)
-                            </nav>
-                        </div>
-                       
-                    </div>
-                    @foreach (var item in articleList.ItemList)
-                    {
-                        <ul class="blog-posts">
-                            <li class="post-item">
-                                <article class="entry">
-                                    <div class="row">
-                                        <div class="col-sm-5">
-                                            <div class="entry-thumb image-hover2">
+                <div class="col-main col-sm-9">
+                    <div id="main" class="blog-wrapper">
+                        <div id="primary" class="site-content">
+                            <div id="content" role="main">
+                                @foreach (var item in articleList.ItemList)
+                                {                                   
+                                    <article lass="blog_entry clearfix wow bounceInUp animated animated">
+                                        <header class="blog_entry-header clearfix">
+                                            <div class="blog_entry-header-inner">
+                                                <h2 class="blog_entry-title"> <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)" rel="bookmark">@item.Title</a> </h2>
+                                                <div class="entry-meta">
+                                                    <time class="entry-date">@Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</time>
+                                                    .
+                                                </div>
+                                            </div>
+                                        
+                                        </header>
+                                        <div class="entry-content">
+                                            <div class="featured-thumb">
                                                 <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">
                                                     <img src="@item.Thumb" alt="@item.Title">
                                                 </a>
                                             </div>
-                                        </div>
-                                        <div class="col-sm-7">
-                                            <div class="entry-ci">
-                                                <h3 class="entry-title"><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h3>
-                                                <div class="entry-meta-data">                                                   
-                                                    <span class="cat">
-                                                        <i class="fa fa-folder-o"></i>
-                                                        <a href="@Anpero.StringHelpper.GetCategoryLink(item.CategoryName,item.CategoryId)">@item.CategoryName </a>
-                                                        
-                                                    </span>
-                                                    <span class="comment-count">
-                                                        <i class="fa fa-comment-o"></i> @item.ViewTime
-                                                    </span>
-                                                    <span class="date"><i class="fa fa-calendar"></i> @Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</span>
-                                                </div>
-                                                
-                                                <div class="entry-excerpt">
-                                                    @item.ShotDesc
-                                                </div>
-                                                <div class="entry-more">
-                                                    <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a>
-                                                </div>
+                                            <div class="entry-content">
+                                                @item.ShotDesc
                                             </div>
+                                            <p> <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a> </p>
                                         </div>
-                                    </div>
-                                </article>
-                            </li>
-
-
-                        </ul>
-                    }
-            
-                    <div class="sortPagiBar clearfix">
-                        <div class="bottom-pagination">
-                            <nav>
+                                    </article>
+                                }
+                            </div>
+                        </div>
+                        <div class="pager">
+                            <div class="pages">
                                 @Html.Raw(ViewBag.page)
-                            </nav>
+                            </div>
                         </div>
                     </div>
                 </div>
             }
             else
             {
-                <div class="center_column col-xs-12 col-sm-9" id="center_column">
-                    <h2 class="page-heading">
-                        <span class="page-heading-title2">Blog post</span>
-                    </h2>
-                    <div class="sortPagiBar clearfix">
-                        <span class="page-noite">Showing 1 to 7 of 45 (15 Pages)</span>
-                        <div class="bottom-pagination">
-                            <nav>
-                                <ul class="pagination">
-                                    <li class="active"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li>
-                                        <a href="#" aria-label="Next">
-                                            <span aria-hidden="true">Next &raquo;</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                    <ul class="blog-posts">
-                        <li class="post-item">
-                            <article class="entry">
-                                <div class="row">
-                                    <div class="col-sm-5">
-                                        <div class="entry-thumb image-hover2">
-                                            <a href="#">
-                                                <img src="/assets/data/blog-1.jpg" alt="Blog">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-7">
-                                        <div class="entry-ci">
-                                            <h3 class="entry-title"><a href="#">Sed ut perspiciatis unde omnis iste natus error</a></h3>
-                                            <div class="entry-meta-data">
-                                                <span class="author">
-                                                    <i class="fa fa-user"></i>
-                                                    by: <a href="#">Admin</a>
-                                                </span>
-                                                <span class="cat">
-                                                    <i class="fa fa-folder-o"></i>
-                                                    <a href="#">News, </a>
-                                                    <a href="#">Promotions</a>
-                                                </span>
-                                                <span class="comment-count">
-                                                    <i class="fa fa-comment-o"></i> 3
-                                                </span>
-                                                <span class="date"><i class="fa fa-calendar"></i> 2014-08-05 07:01:49</span>
-                                            </div>
-                                            <div class="post-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                                <span>(7 votes)</span>
-                                            </div>
-                                            <div class="entry-excerpt">
-                                                Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Donec sit amet eros. Lorem ipsum dolor sit amet, consecvtetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel.
-                                            </div>
-                                            <div class="entry-more">
-                                                <a href="#">Read more</a>
+                <div class="col-main col-sm-9">
+                    <div id="main" class="blog-wrapper">
+                        <div id="primary" class="site-content">
+                            <div id="content" role="main">
+                                <article id="post-29" class="blog_entry clearfix wow bounceInUp animated animated" style="visibility: visible;">
+                                    <header class="blog_entry-header clearfix">
+                                        <div class="blog_entry-header-inner">
+                                            <h2 class="blog_entry-title"> <a href="blog-detail.html" rel="bookmark">LOREM IPSUM DOLOR SIT AMET</a> </h2>
+                                            <div class="entry-meta">
+                                                <time class="entry-date">Jul 10, 2014</time>
+                                                .
                                             </div>
                                         </div>
+                                        <!--blog_entry-header-inner-->
+                                    </header>
+                                    <div class="entry-content">
+                                        <div class="featured-thumb"><a href="#"><img src="images/blog-img.jpg" alt="blog-img3"></a></div>
+                                        <div class="entry-content">
+                                            <p>Fusce ac pharetra urna. Duis non lacus sit amet lacus interdum facilisis sed non est. Ut mi metus, semper eu dictum nec, condimentum sed sapien. Nullam lobortis nunc semper ipsum luctus ut viverra ante eleifend. Nunc pretium velit sed augue luctus accumsan.</p>
+                                            <p>Aliquam laoreet consequat malesuada. Integer vitae diam sed dolor euismod laoreet eget ac felis. Donec non erat sed elit bibendum sodales. Donec eu cursus velit. Proin nunc lacus, gravida mollis dictum ut, vulputate eu turpis. Sed felis sapien, commodo in iaculis in, feugiat sed enim. Sed nunc ipsum, fermentum varius dignissim vitae, blandit et ante.Maecenas sagittis, lorem sed congue egestas, lectus purus congue nisl, ac molestie enim ligula nec eros. Sed leo tortor, tincidunt sit amet elementum vel, eleifend at orci. Maecenas ut turpis felis. Donec sit amet quam sem, et aliquet est.</p>
+                                            <p>Quisque nisl lectus, accumsan et euismod eu, sollicitudin ac augue. In sit amet urna magna. Curabitur imperdiet urna nec purus egestas eget aliquet purus iaculis. Nunc porttitor blandit imperdiet. Nulla facilisi. Cras odio ipsum, vehicula nec vehicula sed, convallis scelerisque quam. Phasellus ut odio dui, ut fermentum neque.</p>
+                                        </div>
+                                        <p> <a href="blog-detail.html" class="btn">Read More</a> </p>
                                     </div>
-                                </div>
-                            </article>
-                        </li>
-              
+                                </article>
 
-                    </ul>
-                    <div class="sortPagiBar clearfix">
-                        <div class="bottom-pagination">
-                            <nav>
-                                <ul class="pagination">
-                                    <li class="active"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li>
-                                        <a href="#" aria-label="Next">
-                                            <span aria-hidden="true">Next &raquo;</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
+                            </div>
+                        </div>
+                        <div class="pager">
+                            <div class="pages">
+                                <!--<strong></strong>-->
+                                <ol class="pagination">
+                                    <li class="active"><a href="">1</a></li>
+                                    <li><a class="button" href="blog.html?p=2">2</a></li>
+                                    <li> <a class="button next i-next" href="blog.html?p=2" title="Next"> » </a> </li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
+                    <!--#main wrapper grid_8-->
+
                 </div>
             }
-      
+
             <!-- ./ Center colunm -->
         </div>
         <!-- ./row-->
