--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -46,21 +46,35 @@
             <div class="row">
                 <div class="col-sm-4 col-xs-12 col-lg-4">
                     <div class="co-info">
-                        <div><a href="index.html"><img src="/assets/images/logo.png" alt="footer logo"></a></div>
+                        <div><a href="/"><img src="@commonInfo.Logo" alt="footer logo"></a></div>
                         <address>
-                            <div><em class="icon-location-arrow"></em> <span>ABC Town Luton Street, New York 226688</span></div>
-                            <div> <em class="icon-mobile-phone"></em><span> + 0800 567 345</span></div>
-                            <div> <em class="icon-envelope"></em><span>support@themesmart.net</span></div>
+                            <div><em class="icon-location-arrow"></em> <span>@commonInfo.Address</span></div>
+                            <div> <em class="icon-mobile-phone"></em><span> @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></div>
+                            <div> <em class="icon-envelope"></em><a href="mailto:@commonInfo.Email" title="@commonInfo.Email"><span>@commonInfo.Email</a></span></div>
                         </address>
                         <div class="social">
                             <ul class="link">
-                                <li class="fb pull-left"><a target="_blank" rel="nofollow" href="#" title="Facebook"></a></li>
-                                <li class="tw pull-left"><a target="_blank" rel="nofollow" href="#" title="Twitter"></a></li>
-                                <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="#" title="GooglePlus"></a></li>
-                                <li class="rss pull-left"><a target="_blank" rel="nofollow" href="#" title="RSS"></a></li>
-                                <li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="#" title="PInterest"></a></li>
-                                <li class="linkedin pull-left"><a target="_blank" rel="nofollow" href="#" title="Linkedin"></a></li>
-                                <li class="youtube pull-left"><a target="_blank" rel="nofollow" href="#" title="Youtube"></a></li>
+                                @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                {
+                                    string thisUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+
+                                    if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                                    {
+                                        <li class="fb pull-left"><a target="_blank" rel="nofollow" href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" title="Facebook"></a></li>
+
+                                    }
+                                    if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                    {
+                                        <li class="skype pull-left"><a target="_blank" rel="nofollow" href="skype:@commonInfo.Skype?call" title="skype"></a></li>
+
+                                    }
+                                    <li class="tw pull-left"><a target="_blank" rel="nofollow" href="http://www.twitter.com/share?url=@thisUrl" title="Twitter"></a></li>
+                                        <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="https://plus.google.com/share?url=@thisUrl" title="GooglePlus"></a></li>
+                                        @*<li class="rss pull-left"><a target="_blank" rel="nofollow" href="#" title="RSS"></a></li>*@
+                                        <li class="pintrest pull-left"><a target="_blank" rel="nofollow" href="http://pinterest.com/pinthis?url=@thisUrl" title="PInterest"></a></li>
+                                        @*<li class="linkedin pull-left"><a target="_blank" rel="nofollow" href="#" title="Linkedin"></a></li>*@
+                                        @*<li class="youtube pull-left"><a target="_blank" rel="nofollow" href="#" title="Youtube"></a></li>*@
+                                }
                             </ul>
                         </div>
                     </div>
@@ -68,25 +82,30 @@
 
                 <div class="col-sm-8 col-xs-12 col-lg-8">
                     <div class="footer-column">
-                        <h4>Quick Links</h4>
+                        <h4>Sản phẩm</h4>
                         <ul class="links">
-                            <li class="first"><a title="How to buy" href="/blog/">Blog</a></li>
-                            <li><a title="FAQs" href="#">FAQs</a></li>
-                            <li><a title="Payment" href="#">Payment</a></li>
-                            <li><a title="Shipment" href="#">Shipment</a></li>
-                            <li><a title="Where is my order?" href="#">Where is my order?</a></li>
-                            <li class="last"><a title="Return policy" href="#">Return policy</a></li>
+                            @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                            {                          
+                                    foreach (var item in commonInfo.ProductCategoryList)
+                                    {
+                                       
+                                        <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
+                                    }                               
+                            }
+                            
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Style Advisor</h4>
+                        <h4>Thông tin</h4>
                         <ul class="links">
-                            <li class="first"><a title="Your Account" href="#">Your Account</a></li>
-                            <li><a title="Information" href="#">Information</a></li>
-                            <li><a title="Addresses" href="#">Addresses</a></li>
-                            <li><a title="Addresses" href="#">Discount</a></li>
-                            <li><a title="Orders History" href="#">Orders History</a></li>
-                            <li class="last"><a title=" Additional Information" href="#"> Additional Information</a></li>
+                          
+                            <li><a title="Information" href="/home/contact">Liên hệ</a></li>
+                            <li><a title="Information" href="/home/about">Về chúng tôi</a></li>
+                            <li><a title="Information" href="/blogs">Blogs</a></li>
+                            <li><a title="Addresses" href="/policy/ship">Chính sách vận chuyển</a></li>
+                            <li><a title="Addresses" href="/policy/rollback">Chính sách đổi trả</a></li>
+                            <li><a title="Orders History" href="/policy/payment">hướng dẫn thanh toán</a></li>
+                         
                         </ul>
                     </div>
                     <div class="footer-column">
