--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -103,32 +103,28 @@
                             <li><a title="Information" href="/blogs">Blogs</a></li>
                             <li><a title="Addresses" href="/policy/ship">Chính sách vận chuyển</a></li>
                             <li><a title="Addresses" href="/policy/rollback">Chính sách đổi trả</a></li>
-                            <li><a title="Orders History" href="/policy/payment">hướng dẫn thanh toán</a></li>
+                            <li><a title="Orders History" href="/policy/payment">Hướng dẫn thanh toán</a></li>
                          
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Information</h4>
-                        <ul class="links">
-                            <li class="first"><a title="Site Map" href="#">Site Map</a></li>
-                            <li><a title="Search Terms" href="#">Search Terms</a></li>
-                            <li><a title="Advanced Search" href="#">Advanced Search</a></li>
-                            <li><a title="History" href="#">About Us</a></li>
-                            <li><a title="History" href="#">Contact Us</a></li>
-                            <li><a title="Suppliers" href="#">Suppliers</a></li>
-                        </ul>
+                        @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                        {
+
+                            <div class="fb-page"
+                                data-tabs="messages"
+                                data-href="@Html.Raw(commonInfo.FaceBookLink)"
+                                data-height="220"
+                                data-hide-cover="false">
+                            </div>
+                        }
                     </div>
-
-
-
-
                 </div>
 
                 <!--col-sm-12 col-xs-12 col-lg-8-->
                 <!--col-xs-12 col-lg-4-->
             </div>
             <!--row-->
-
         </div>
 
         <!--container-->
@@ -367,13 +363,13 @@
                 <img alt="newsletter" src="/assets/images/newsletter_img.png">
             </div>
             <form method="post" id="popup-newsletter" name="popup-newsletter" class="email-form">
-                <h3>Newsletter Sign up</h3>
+                <h3>Nhận thông tin khuyến mại</h3>
 
-                <h4>sign up for our exclusive email list and be the first to hear of special offers.</h4>
+                <h4>Nhập địa chỉ email của bạn để nhận thông tin khuyến mại của chúng tôi.</h4>
                 <div class="newsletter-form">
                     <div class="input-box">
                         <input type="text" name="email" id="newsletter2" title="Sign up for our newsletter" placeholder="Enter your email address" class="input-text required-entry validate-email">
-                        <button type="submit" title="Subscribe" class="button subscribe"><span>Subscribe</span></button>
+                        <button type="submit" title="Subscribe" class="button subscribe"><span>Đăng ký</span></button>
 
                     </div> <!--input-box-->
                 </div> <!--newsletter-form-->
@@ -384,4 +380,16 @@
     </div> <!--newsletter-sign-box-->
 </div>
 <div id="fade" style="display: block;"></div>
-
+<div id="fb-root"></div>
+<script>
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    $(window).load(function () {
+        Cart.bindCart();
+    });
+</script>
