--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -20,48 +20,23 @@
         <div class="container">
             <div class="row">
                 <ul>
-                    <li>
-                        <div>
-                            <a href="#" data-scroll-goto="1">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner1">
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="#" data-scroll-goto="2">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner2">
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="#" data-scroll-goto="3">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner3">
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="#" data-scroll-goto="4">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner4">
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="#" data-scroll-goto="5">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner5">
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="/register">
-                                <img src="/assets/images/gray-banner.png" alt="promotion-banner6">
-                            </a>
-                        </div>
-                    </li>
+                    @if (ViewData["AdsSlide"] != null)
+                    {
+                        Ads[] slide = (Ads[])ViewData["AdsSlide"];
+                        if (slide.Length > 0)
+                        {
+                            for (int i = 0; i < slide.Length; i ++)
+                            {
+                                <li>
+                                    <div>
+                                        <a href="@slide[i].ClickUrl" data-scroll-goto="@(i+1)">
+                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
+                                        </a>
+                                    </div>
+                                </li>
+                            }
+                        }
+                    }
                 </ul>
             </div>
         </div>
