--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -148,9 +148,18 @@
     <section class=" wow bounceInUp animated">
         <div class="best-pro slider-items-products container">
             <div class="new_title">
-                <h2>Best Seller</h2>
+                <h2>Sản phẩm bán chạy</h2>
             </div>
-            <div class="cate-banner-img"><img src="/assets/images/bestseller-banner.png" alt="Retis lapen casen"></div>
+            <div class="cate-banner-img">
+                @if (ViewData["AdsSlide2"] != null)
+                {
+                    Ads[] slide = (Ads[])ViewData["AdsSlide2"];
+                    if (slide.Length > 0)
+                    {
+                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
+                    }
+                }
+            </div>
             <div id="best-seller" class="product-flexslider hidden-buttons">
                 <div class="slider-items slider-width-col4 products-grid">
                     <div class="item">
