--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -21,12 +21,12 @@
                     <!-- Footer Newsletter -->
                     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col1">
                         <div class="newsletter-wrap">
-                            <h4>Sign up for emails</h4>
+                            <h4>Đăng ký</h4>
                             <form action="#" method="post" id="newsletter-validate-detail1">
                                 <div id="container_form_news">
                                     <div id="container_form_news2">
-                                        <input type="text" name="email" id="newsletter1" title="Sign up for our newsletter" class="input-text required-entry validate-email" placeholder="Enter your email address">
-                                        <button type="submit" title="Subscribe" class="button subscribe"><span>Subscribe</span></button>
+                                        <input type="text" name="email" id="newsletter1" title="Nhận thông tin khuyến mại." class="input-text required-entry validate-email" placeholder="Nhập địa chỉ email của bạn...">
+                                        <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
                                     </div>
                                     <!--container_form_news2-->
                                 </div>
@@ -49,7 +49,7 @@
                         <address>
                             <div><em class="icon-location-arrow"></em> <span>@commonInfo.Address</span></div>
                             <div> <em class="icon-mobile-phone"></em><span> @Anpero.StringHelpper.ToPhoneNumberFormat(commonInfo.HotLine)</span></div>
-                            <div> <em class="icon-envelope"></em><a href="mailto:@commonInfo.Email" title="@commonInfo.Email"><span>@commonInfo.Email</a></span></div>
+                            <div> <em class="icon-envelope"></em><span>@commonInfo.Email</span></div>
                         </address>
                         <div class="social">
                             <ul class="link">
@@ -368,8 +368,8 @@
                 <h4>Nhập địa chỉ email của bạn để nhận thông tin khuyến mại của chúng tôi.</h4>
                 <div class="newsletter-form">
                     <div class="input-box">
-                        <input type="text" name="email" id="newsletter2" title="Sign up for our newsletter" placeholder="Enter your email address" class="input-text required-entry validate-email">
-                        <button type="submit" title="Subscribe" class="button subscribe"><span>Đăng ký</span></button>
+                        <input type="text" name="email" id="newsletter2" title="Nhận thông tin khuyến mại" placeholder="Nhập địa chỉ email của bạn..." class="input-text required-entry validate-email">
+                        <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
 
                     </div> <!--input-box-->
                 </div> <!--newsletter-form-->
