add list production and list best sales

--- a/Shop_03_multiProduct/assets/stylesheet/style.css
+++ b/Shop_03_multiProduct/assets/stylesheet/style.css
@@ -12055,7 +12055,7 @@ select#shipping-address-select {
 	border-bottom: none;
 	text-align: center;
 	background-repeat: no-repeat;	
-	background-image: url(../images/category-bg.png);
+	background-image: url(../images/category-bg.jpg);
 	margin-top:-80px
 }
 
