--- a/BDS_04_BatDongSan_MultiLand/Views/Product/Category.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Product/Category.cshtml
@@ -81,11 +81,10 @@
                                                 else
                                                 {
                                                     <div class="content_price">
-                                                        <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
+                                                        <span class="price product-price">@Anpero.StringHelpper.ConvertToVndMoney(item.Price)</span>
                                                     </div>
                                                 }
-                                                <div class="info-orther">
-                                                    <p>Item Code: # @item.Id</p>
+                                                <div class="info-orther">                                                  
                                                     @if (item.IsInstock)
                                                     {
                                                         <p class="availability">Trạng thái: <span>Còn hàng</span></p>
