--- a/Shop_03_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -11,10 +11,12 @@
                         {
                             foreach (var item in slide)
                             {
+                            
                                 <li data-transition='random' data-slotamount='7' data-masterspeed='1000' data-thumb='@item.ImagesUrl'>
                                     <img src='@item.ImagesUrl' data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="slider-image1" />
                                     <div class="info">
-                                        @item.Description
+                                        @Html.Raw(item.Description)
+                                        
                                     </div>
                                 </li>
                             }
